# ml-model-monitoring-drift-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_reference.csv
drift/: __init__.py  alerts.py  cli.py  config.py  detectors.py  metrics.py  pipeline.py  windows.py
tests/: test_alerts.py  test_architecture.py  test_cli.py  test_config.py  test_detectors.py  test_metrics.py  test_pipeline.py  test_windows.py
